--- a/environment.yml
+++ b/environment.yml
@@ -24,6 +24,7 @@ dependencies:
   - wheel=0.45.1=py313hca03da5_0
   - xz=5.6.4=h80987f9_1
   - zlib=1.3.1=h5f15de7_0
+  - plotly=6.4.0
   - pip:
       - altair==5.5.0
       - attrs==25.4.0
